--- a/Assignment1/views/partials/Header.pug
+++ b/Assignment1/views/partials/Header.pug
@@ -1,1 +1,13 @@
 h1= title
+hr
+nav
+    ul
+        li
+            a(href='../about') About Me
+        li
+            a(href='../services') Services
+        li
+            a(href='../projects') Projects          
+        li
+            a(href='../contact') Contact Me
+        
