--- a/Assignment1/views/contact.pug
+++ b/Assignment1/views/contact.pug
@@ -1,5 +1,17 @@
 extends layout
 
 block content
-    include partials/header
-    include partials/footer
+    h2 Wanted to contact me ?
+
+    p 
+        b Address: 
+        p 12 XYZ street
+        p Toronto, ON, M1X 2Y5
+  
+    p 
+        b Mobile No. :
+        p (437)123-1234
+    
+    p 
+        b Email:
+        P 200427314@student.georgianc.on.ca
