--- a/Assignment1/views/index.pug
+++ b/Assignment1/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-    include partials/header
-    include partials/footer
+
+    img(src='/images/pic.jpg')
+
+    div(class='info')
+        h3 My name is Manjot Singh Saha
+
