--- a/Assignment1/views/layout.pug
+++ b/Assignment1/views/layout.pug
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/main.css')
+    link(href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap",rel="stylesheet")
   body
+    include partials/header
     block content
+    include partials/footer
