--- a/Assignment1/views/partials/Footer.pug
+++ b/Assignment1/views/partials/Footer.pug
@@ -1,3 +1,7 @@
+br
+br
 hr
 p
-    small &copy; All rights reserved to Manjot Singh Saha
+    small &copy; All rights reserved to Manjot Singh Saha (200427314)
+p 
+    small Assignment 1 - Javascript Frameworks
