--- a/Assignment1/views/about.pug
+++ b/Assignment1/views/about.pug
@@ -1,5 +1,20 @@
 extends layout
 
+
 block content
-    include partials/header
-    include partials/footer
+    h2 About
+    p My name is Manjot SIngh Saha. 
+    p I am an International student in Canada and is currently enrolled in Computer Programming Diploma in Georgian College.
+
+    h2 Education 
+    ul
+        li Computer Programming (2019 - 2021)
+            br
+            p Georgian College, Barrie
+        li High School Diploma (2017 - 2018)
+            br
+            p Army Public School, Ambala Cantt
+
+
+    h2 Goal
+    p I always wanted to become a software programmer and work for a highly reputed organization.
