--- a/Assignment1/views/partials/Header.pug
+++ b/Assignment1/views/partials/Header.pug
@@ -1,13 +1,10 @@
-h1= title
-hr
-nav
-    ul
-        li
-            a(href='../about') About Me
-        li
-            a(href='../services') Services
-        li
-            a(href='../projects') Projects          
-        li
-            a(href='../contact') Contact Me
-        
+a(href='/')
+    h1 My Portfolio
+
+div(class="topnav")
+    a(class="active") #{title}
+    a(href="about") About Me
+    a(href="contact") Contact 
+    a(href="services") Services
+    a(href="Projects") Projects
+
