--- a/Assignment1/views/projects.pug
+++ b/Assignment1/views/projects.pug
@@ -1,5 +1,14 @@
 extends layout
 
 block content
-    include partials/header
-    include partials/footer
+    h2 Gaming Website
+    p Built a gaming website using web programming languages such as HTML and CSS in first semester in Goergian College. 
+
+    h2 Scrabble (Game)
+    p Made a Scrabble game based on java programming language in my third semeseter in which I did the programming and also used GUI to make it look impressive
+    
+    h2 University Website
+    p Made a University Website in my third semester using Asp.Net Using C#. 
+
+    h2 Self Irrigating Planter (Arduino Project)
+    p Built a self-irrigating planter which was based on the mechanism that it will automatically water the plants if the moisture level in the soil is low.
