--- a/Assignment1/views/services.pug
+++ b/Assignment1/views/services.pug
@@ -1,5 +1,20 @@
 extends layout
 
 block content
-    include partials/header
-    include partials/footer
+    p I know how to code in many different programming languages
+
+    h3 Web Programming Languages
+    ul 
+        li HTML
+        li CSS
+        li JavaScript
+        li ASP.NET
+        li PHP 
+        li MEAN stack
+
+    h3 Softare Development Languages
+    ul 
+        li Java
+        li C++
+        li C#.NET
+        li Swift
