--- a/Assignment1/views/contact.pug
+++ b/Assignment1/views/contact.pug
@@ -1,6 +1,14 @@
 extends layout
 
 block content
+
+    //
+                File Name: Contact page 
+            Author's name: Manjot Singh Saha
+             Website name: My Portfolio
+         File description: This file contains the conatct information and will render the page when asked by the user.
+    //
+
     h2 Wanted to contact me ?
 
     p 
