--- a/Assignment1/views/index.pug
+++ b/Assignment1/views/index.pug
@@ -2,8 +2,16 @@ extends layout
 
 block content
 
+    //
+               File Name: Home page 
+           Author's name: Manjot Singh Saha
+            Website name: My Portfolio
+        File description: This file is the home page of the website.
+    //
+
     img(src='/images/pic.jpg')
 
     div(class='info')
         h3 My name is Manjot Singh Saha
+
 
