--- a/Assignment1/views/partials/Header.pug
+++ b/Assignment1/views/partials/Header.pug
@@ -1,6 +1,16 @@
+//
+            File Name: Header 
+        Author's name: Manjot Singh Saha
+         Website name: My Portfolio
+     File description: This file will provide header to all the web pages.
+//
+
+
+// this will take us back to the home page by clicking on it
 a(href='/')
     h1 My Portfolio
 
+// This is the nav bar
 div(class="topnav")
     a(class="active") #{title}
     a(href="about") About Me
