--- a/Assignment1/views/projects.pug
+++ b/Assignment1/views/projects.pug
@@ -1,6 +1,13 @@
 extends layout
 
 block content
+    //
+            File Name: Projects page 
+        Author's name: Manjot Singh Saha
+            Website name: My Portfolio
+        File description: This file contains the projects information that i have created and will render the page when asked by the user.
+    //
+
     h2 Gaming Website
     p Built a gaming website using web programming languages such as HTML and CSS in first semester in Goergian College. 
 
