--- a/Assignment1/views/services.pug
+++ b/Assignment1/views/services.pug
@@ -1,6 +1,14 @@
 extends layout
 
 block content
+
+    //
+                File Name: Services page 
+            Author's name: Manjot Singh Saha
+             Website name: My Portfolio
+         File description: This file contains the information of the services provided by me and will render the page when asked by the user.
+    //
+
     p I know how to code in many different programming languages
 
     h3 Web Programming Languages
