--- a/Assignment1/views/about.pug
+++ b/Assignment1/views/about.pug
@@ -1,7 +1,14 @@
 extends layout
 
-
 block content
+
+    //
+                File Name: About Me page 
+            Author's name: Manjot Singh Saha
+                Website name: My Portfolio
+            File description: This file contains the information about me and will render the page when asked by the user.
+    //
+
     h2 About
     p My name is Manjot SIngh Saha. 
     p I am an International student in Canada and is currently enrolled in Computer Programming Diploma in Georgian College.
