--- a/Assignment1/views/partials/Footer.pug
+++ b/Assignment1/views/partials/Footer.pug
@@ -1,3 +1,10 @@
+//
+            File Name: Footer 
+        Author's name: Manjot Singh Saha
+         Website name: My Portfolio
+     File description: This file will provide footer to all the web pages.
+//
+
 br
 br
 hr
